# qrgenerator

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  CLAUDE.md  CONFIGURE_URLS.md  Dockerfile  Makefile  NEXT_STEPS.md  PROJECT_SETUP_SUMMARY.md  QR_GENERATOR_SUMMARY.md  README.md  build.sh  continue_here.py  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  validate_deployment.py  validate_setup.py
.github/workflows/: ci.yml  codeql.yml
apps/accounts/: admin.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/accounts/: login.html  profile.html  register.html
apps/core/: urls.py  views.py
apps/core/templates/core/: home.html
apps/qr_codes/: admin.py  models.py  urls.py  utils.py  views.py
apps/qr_codes/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
docs/: AUTH_SETUP.md  BEGINNERS_GUIDE.md  CODING_GUIDE.md  FILE_HANDLING.md  PWA_SETUP.md  STYLE_GUIDE.md
nginx/: Dockerfile  nginx.conf
requirements/: base.txt  development.txt
static/: manifest.json
static/css/: base.css
static/css/apps/: qr_codes.css
static/css/components/: buttons.css  cards.css  forms.css  navbar.css
static/js/: service-worker.js
templates/: 403.html  404.html  500.html  base.html
templates/accounts/: logged_out.html  login.html  profile.html  register.html
templates/core/: home.html
templates/qr_codes/: qr_analytics.html  qr_code_create.html  qr_code_detail.html  qr_code_edit.html  qr_code_list.html  qr_error.html  qr_password.html
